force-app/main/default/objects/custom_create293__c/custom_create293__c.object-meta.xml
<CustomObject>
    <label>Custom created object293</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects293</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>