force-app/main/default/objects/custom_create293__c/fields/custom_create_293field686__c.field-meta.xml
<CustomField>
    <fullName>custom_create_293field686__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 293field686</label>
    <type>Checkbox</type>
</CustomField>